tests/cases/standard-library/ok/vec/std-vec-new-handle.ari
fn main() -> i64 {
  var zone = zone::create(128);
  let vec = std::vec::new<i64>(ref mut zone, 3);

  ptr_store(vec.raw.data, 29);
  ptr_store(ptr_add(vec.raw.data, 1), 8);

  let total = ptr_load(vec.raw.data) + ptr_load(ptr_add(vec.raw.data, 1)) + vec.raw.len + vec.raw.capacity;
  zone::destroy(zone);
  return total;
}
